# delta-forge

./: Cargo.toml  README.md
docs/: data-model.md  implementation-guide.md  spec.md  tech-stack.md
docs/adr/: ADR-001-language-choice.md  ADR-002-graph-library.md  ADR-003-type-erasure.md  ADR-004-cache-sqlite.md
src/: cache.rs  engine.rs  lib.rs  log.rs  main.rs  node.rs  scheduler.rs
