[package]
name = "delta-forge"
version = "0.1.0"
edition = "2021"
description = "Incremental computation engine — recomputes only what changed"

[lib]
name = "delta_forge"
path = "src/lib.rs"

[[bin]]
name = "delta-forge"
path = "src/main.rs"

[dependencies]
petgraph  = "0.6"
rusqlite  = { version = "0.31", features = ["bundled"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
rayon     = "1"
anyhow    = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
